# konstrukt-pkman-dependencies

./: Makefile  README.md  config.mk.sample  lua-LICENSE.txt  lua-zip-LICENSE.txt
src/: .gitattributes  get-src  lua-zip.patch  lua.patch  luaconf.h.patch  makefile.mk  wxlua-CMakewxAppLib.cmake.patch  wxlua-FindwxWidgets.cmake.patch  wxlua.patch
src/konstrukt-pkman-icon/: Makefile
src/konstrukt-pkman-launcher/: CMakeLists.txt  launcher.cpp  launcher.rc.in  make-payload
